[package]
name = "nyxproxy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.1", features = ["full", "http1", "http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
serde = { version = "1", features = ["derive"] }     # JSON Parsing
serde_json = "1"                                     # JSON Handling
log = "0.4"                                         # Logging
env_logger = "0.10"                                  # Einfache Log-Ausgabe
